app/style.css
/* ... */
/*************** D. 11 January 2018  **************/

.productModal  .blade-inside .subhead h2{
    font-size: 15px!important;
    margin-top: 0px!important;
    font-family: Georgia,Times,Times New Roman,serif!important;
    font-weight: 600!important;
    color: #292828!important;
}
.productModal  .blade-inside .subhead .specs-list{
    padding-left: 30px!important;
    text-align: left!important;
    margin-bottom: 15px!important;
}
.productModal  .blade-inside .subhead .specs-list li{
    line-height: 1.5em!important;
    text-align: left!important;
    clear: both!important;
    margin-bottom: 8px!important;
}
.productModal  .blade-inside .subhead .specs-list li .label {
    font-size: 13px!important;
    font-weight: 600!important;
    color: #000!important;
}

/*********** D. 16 Jan 2018 *************/
.productAccordian{
    margin-bottom: 10px!important;
}
.productAccordian .panel-heading {
    padding: 18px!important;
}
#suggestionAccordion {
    padding: 0 14px!important;
}
.productAccordian .panel-title {
    font-size: 15px!important;
    font-weight: 600!important;
}
.productAccordian .panel-body {
    padding: 0px!important;
}
.productAccordian .panel-title span.glyphicon{
    float: right;
    margin-top: -4px;
    color: #757474;
}
.productAccordian .rt-noData {
    margin-top: -12px!important;
    margin-bottom: 50px!important;
    text-align: center!important;
}

